# monoidal-containers

./: .gitignore  .travis.yml  Changelog.md  README.md  cabal.project  default.nix  monoidal-containers.cabal  release.nix  shell.nix
.github/workflows/: Cabal.yml  haskell-ci.yml
monoidal-containers/: Changelog.md  monoidal-containers.cabal
monoidal-containers-lens/: Changelog.md  LICENSE  default.nix  monoidal-containers-lens.cabal
monoidal-containers-lens/src/Data/HashMap/Monoidal/: Lens.hs
monoidal-containers-lens/src/Data/IntMap/Monoidal/: Lens.hs
monoidal-containers-lens/src/Data/IntMap/Monoidal/Strict/: Lens.hs
monoidal-containers-lens/src/Data/Map/Monoidal/: Lens.hs
monoidal-containers-lens/src/Data/Map/Monoidal/Strict/: Lens.hs
monoidal-containers/src/Data/HashMap/: Monoidal.hs
monoidal-containers/src/Data/IntMap/: Monoidal.hs
monoidal-containers/src/Data/IntMap/Monoidal/: Strict.hs
monoidal-containers/src/Data/Map/: Monoidal.hs
monoidal-containers/src/Data/Map/Monoidal/: Strict.hs
nixpkgs/23.11/: github.json
nixpkgs/unstable/: github.json
src/Data/HashMap/: Monoidal.hs
src/Data/IntMap/: Monoidal.hs
src/Data/IntMap/Monoidal/: Strict.hs
src/Data/Map/: Monoidal.hs
src/Data/Map/Monoidal/: Strict.hs
